--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,9 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "files.associations": {
+    "*.ejs": "html",
+    "vector": "cpp"
+  }
 }
